aligned the text in the cell correctly

--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ div.cell{
     aspect-ratio: 3/2;
     margin: 1vh;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-end;
 }
 
